test: don't delete env on failure so can debug
- Tested DB before running pipeline (success in connection)
- Updated backend/.env with new TYPEORM_HOST and TYPEORM_PASSWORD
- Updated CircleCI env variables with new TYPEORM_HOST and TYPEORM_PASSWORD

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -78,12 +78,12 @@ commands:
               ]
             }
 
-  slack-success-notification:
-    description: Slack notification on job success
-    steps:
-      - slack/notify:
-          event: pass
-          template: basic_success_1
+  # slack-success-notification:
+  #   description: Slack notification on job success
+  #   steps:
+  #     - slack/notify:
+  #         event: pass
+  #         template: basic_success_1
 
   # Stack commands
   destroy-environment:
@@ -778,10 +778,10 @@ jobs:
             fi
 
       # Here's where you will add some code to rollback on failure
-      - destroy-environment:
-          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
-      - revert-migrations:
-          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+      # - destroy-environment:
+      #     workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+      # - revert-migrations:
+      #     workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
       # Custom failure reason message
       - custom-failure-alert-message:
           custom_message:
