--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -482,7 +482,7 @@ jobs:
       - run:
           name: Configure server
           command: |
-            cd ~/project.circleci/ansible
+            cd ~/project/.circleci/ansible
             ansible-playbook -i inventory.txt configure-server.yml
       # Here's where you will add some code to rollback on failure
       - destroy-environment:
