--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -508,14 +508,10 @@ jobs:
   run-migrations:
     docker:
       # Docker image here that supports NodeJS
-      - image: python:3.10-alpine3.16
+      - image: circleci/node:13.8.0
     steps:
       # Checkout code from git
       - checkout
-      - run:
-          name: Install dependencies
-          command: |
-            apk add --update --no-cache tar gzip nodejs npm aws-cli curl
       # Run migrations
       # Save evidence (in migrations_dump.txt) of any new migrations run
       - run:
@@ -525,6 +521,7 @@ jobs:
             npm install
             npm run build
             npm run migrations > migrations_dump.txt
+            ls -la
             cat migrations_dump.txt
       # Send migration status to 3rd party key-value store
       # migration output will include "...has been executed successfully"
@@ -542,9 +539,8 @@ jobs:
           command: |
             if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
             then
-              curl https://kvdb.io/HmnnciQC9qtfnJNaBpePv3/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d 'SUCCESS'
-            else
-              curl https://kvdb.io/HmnnciQC9qtfnJNaBpePv3/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d 'FAILURE'
+              sudo apt-get update && sudo apt-get install -y ca-certificates
+              curl https://kvdb.io/HmnnciQC9qtfnJNaBpePv3/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
             fi
       # Here's where you will add some code to rollback on failure
       - destroy-environment:
@@ -782,7 +778,8 @@ jobs:
           custom_message:
             "If backend failed smoke test please check that tested manually created resource e.g. database before running workflow.
             If yes then please investigate further using methods such as disable destory-environment and revert-migration on failure in smoke test then:
-            ssh into the EC2 instance (ssh -i /path/key-pair-name.pem instance_user_name@instance_public_dns_name) then view production process manager logs (sudo pm2 logs)"
+            ssh into the EC2 instance (ssh -i /path/key-pair-name.pem instance_user_name@instance_public_dns_name) then view production process manager logs (sudo pm2 logs) or (npm run start).
+            Backend issues usually stem from configure-infrastructure or run-migrations. For frontend issue consider using Chrome developer tools"
       # Success notification
       # - slack-success-notification
 
