--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -473,7 +473,6 @@ jobs:
             # no-cache to keep container small
             apk add --update --no-cache tar gzip ansible aws-cli 
             pip install awscli
-
       # Finish Ansible playbook (project/.circleci/ansible/configure-server.yml) before configuring server
       # Playbook will be run against EC2 instance that has been programmatically created in CircleCi job deploy-infrastructure
 
@@ -482,7 +481,7 @@ jobs:
       - run:
           name: Configure server
           command: |
-            cd ~/project/.circleci/ansible
+            cd ~project/.circleci/ansible
             ansible-playbook -i inventory.txt configure-server.yml
       # Here's where you will add some code to rollback on failure
       - destroy-environment:
@@ -508,10 +507,14 @@ jobs:
   run-migrations:
     docker:
       # Docker image here that supports NodeJS
-      - image: circleci/node:13.8.0
+      - image: python:3.10-alpine3.16
     steps:
       # Checkout code from git
       - checkout
+      - run:
+          name: Install dependencies
+          command: |
+            apk add --update --no-cache tar gzip nodejs npm aws-cli curl tree
       # Run migrations
       # Save evidence (in migrations_dump.txt) of any new migrations run
       - run:
@@ -521,7 +524,7 @@ jobs:
             npm install
             npm run build
             npm run migrations > migrations_dump.txt
-            ls -la
+            tree -C
             cat migrations_dump.txt
       # Send migration status to 3rd party key-value store
       # migration output will include "...has been executed successfully"
@@ -539,9 +542,10 @@ jobs:
           command: |
             if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
             then
-              sudo apt-get update && sudo apt-get install -y ca-certificates
               curl https://kvdb.io/HmnnciQC9qtfnJNaBpePv3/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
             fi
+            echo grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
+            echo https://kvdb.io/HmnnciQC9qtfnJNaBpePv3/migration_${CIRCLE_WORKFLOW_ID:0:7}
       # Here's where you will add some code to rollback on failure
       - destroy-environment:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
