--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -525,11 +525,11 @@ jobs:
             cd backend
             npm install
             npm run migrations > migrations_dump.txt
-            echo Show files and directories in backend (tree)
+            echo "Show files and directories in backend (tree)"
             tree -C -L 2
-            echo Show files and directories in backend (ls)
+            echo "Show files and directories in backend (ls)"
             ls -a
-            echo Show migrations_dump.txt
+            echo "Show migrations_dump.txt"
             cat migrations_dump.txt
       # Send migration status to 3rd party key-value store
       # migration output will include "...has been executed successfully"
