--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -483,8 +483,10 @@ jobs:
       - run:
           name: Configure server
           command: |
+            echo "${TYPEORM_HOST}"
             cd .circleci/ansible
             ansible-playbook -i inventory.txt configure-server.yml
+            echo "${TYPEORM_HOST}"
       # Here's where you will add some code to rollback on failure
       - destroy-environment:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
